--- a/src/app/(public)/components/card/case/styles.module.css
+++ b/src/app/(public)/components/card/case/styles.module.css
@@ -75,3 +75,21 @@
   display: flex;
   flex-direction: column;
 }
+
+.infoContainer{
+  max-height: 150px !important;
+
+}
+
+.titleContainer{
+  display: inline-block;
+  word-break: break-word;
+  text-wrap: wrap;
+}
+
+.descriptionContainer{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
